--- a/CPP/.vscode/settings.json
+++ b/CPP/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
   "files.associations": {
-    "iostream": "cpp"
+    "iostream": "cpp",
+    "algorithm": "cpp",
+    "array": "cpp",
+    "limits": "cpp",
+    "string_view": "cpp"
   }
 }
