CPP 기초 알고리즘

--- a/CPP/.vscode/settings.json
+++ b/CPP/.vscode/settings.json
@@ -4,6 +4,7 @@
     "algorithm": "cpp",
     "array": "cpp",
     "limits": "cpp",
-    "string_view": "cpp"
+    "string_view": "cpp",
+    "vector": "cpp"
   }
 }
